--- a/wallafood/templates/wallafood/login.html
+++ b/wallafood/templates/wallafood/login.html
@@ -27,7 +27,7 @@
                     <span class="icon-bar"></span>
                     <span class="icon-bar"></span>
                 </button>
-                <a class="navbar-brand" href={% url 'index' %}>Wallafood UPM</a>
+                <a class="navbar-brand" href={% url 'login' %}>Wallafood UPM</a>
             </div>
         </div> <!-- /.container-fluid -->
     </nav>
@@ -48,20 +48,24 @@
                         <div class="form-group">
                             <label for="inputPassword">Password</label>
                             <input type="password" name="password" class="form-control" id="inputPassword" placeholder="Password">
+                            <div class="help-block text-right"><a href="">Forgot the password?</a></div>
                         </div>
-                        <button type="submit" class="btn btn-sm btn-default">Log in</button>
-                    </form>
-                    <br>
-                    {% for message in messages %}
-                    <div class="alert alert-danger">
-                        {{ message }}
+                        <div class="form-group">
+                            <button type="submit" class="btn btn-primary btn-block">Sign in</button>
+                        </div>
+
+                        {% for message in messages %}
+                        <div class="alert alert-danger">
+                            {{ message }}
+                        </div>
+                        {% endfor %}
+                    </form>                    
+                    <div class="bottom text-center">
+                        New here ? <a href={% url 'register' %}><b>Join Us</b></a>
                     </div>
-                    {% endfor %}
                 </div>
             </div>
         </div>
     </div>
-
 </body>
-
 </html>
