--- a/wallafood/templates/wallafood/forbidden.html
+++ b/wallafood/templates/wallafood/forbidden.html
@@ -26,7 +26,7 @@
                     <span class="icon-bar"></span>
                     <span class="icon-bar"></span>
                 </button>
-                <a class="navbar-brand" href={% url 'index' %}>Wallafood Online UPM</a>
+                <a class="navbar-brand" href={% url 'login' %}>Wallafood Online UPM</a>
             </div>
 
             <!-- Collect the nav links, forms, and other content for toggling -->
