--- a/wallafood/templates/wallafood/advertisements.html
+++ b/wallafood/templates/wallafood/advertisements.html
@@ -47,6 +47,9 @@
                         </ul>
                     </li>
                     <li>
+                        <a href={% url 'addAdvert' %}>Add Advertisement</a>
+                    </li>
+                    <li>
                         <a href={% url 'doLogout' %}>Logout</a>
                     </li>
                 </ul>
@@ -54,20 +57,8 @@
         </div> <!-- /.container-fluid -->
     </nav>
     <div class="container-fluid text-center">
-        <h1 class="bold">Add Advertisement</h1>
+        <h1 class="bold">Advertisements</h1>
     </div> 
-    <div class="container-fluid" style="padding-block-end: 1%">
-        <form id="edittext" action={% url 'findAdvertisement' %}>
-            <div class="input-group input-group-lg">
-                <input type="text" name="text_search" class="form-control" placeholder="Search film">
-                <div class="input-group-btn">
-                    <button class="btn btn-info" type="submit">
-                        <i class="glyphicon glyphicon-search"></i>
-                    </button>
-                </div>
-            </div>
-        </form>
-    </div>
     <div class="container-fluid" id="film_info">
         <div class="container-fluid" style="padding-block-end: 1%">
             <form id="edittext" action={% url 'findAdvertisement' %}>
@@ -92,14 +83,8 @@
                 </div>
                 <div class="col-md-7">
                     <h1 class="list-group-item-heading bold"> {{ element.name }} </h1>
-                    <!--<h4 class="list-group-item-text dateColor">{{ element.date }}</h4>
-                    <h3 class="list-group-item-text bold">Overview</h3>
-                    <p class="list-group-item-text">{{ element.overview }}</p>-->
                 </div>
                 <div class="col-md-3 text-center">
-                    <!--<h3>Average: </h3><h3 class="bold">{{ element.vote_average }}</h3>
-                    <a type="button" class="btn btn-primary btn-lg btn-block margin-see-more" href="{% url 'doSeeMore' %}?id={{ element.id_movie | urlencode }}"
-                        role="button">See more</a>-->
                 </div>
             </div>
    
