--- a/wallafood/templates/wallafood/login.html
+++ b/wallafood/templates/wallafood/login.html
@@ -48,7 +48,7 @@
                         <div class="form-group">
                             <label for="inputPassword">Password</label>
                             <input type="password" name="password" class="form-control" id="inputPassword" placeholder="Password">
-                            <div class="help-block text-right"><a href="">Forgot the password?</a></div>
+                            <div class="help-block text-right"><a href={% url 'password_reset' %}>Forgot the password?</a></div>
                         </div>
                         <div class="form-group">
                             <button type="submit" class="btn btn-primary btn-block">Sign in</button>
