Finished password recovery template

--- a/wallafood/templates/wallafood/password_reset.html
+++ b/wallafood/templates/wallafood/password_reset.html
@@ -8,11 +8,11 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
 
-    <title>Password reset complete - Wallafood UPM</title>
+    <title>Password reset - Wallafood UPM</title>
 
     <!-- Bootstrap core CSS -->
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
-    <link rel="stylesheet" href={% static 'wallafood/css/password_reset_complete.css' %}>
+    <link rel="stylesheet" href={% static 'wallafood/css/password_reset.css' %}>
     <link href="https://fonts.googleapis.com/css?family=Exo" rel="stylesheet">
 </head>
 
@@ -36,14 +36,26 @@
         <div class="col-md-6">
             <div class="panel panel-default">
                 <div class="panel-heading">
-                    <h3 class="panel-title"><strong>Password reset complete </strong></h3>
+                    <h3 class="panel-title"><strong>Reset password </strong></h3>
                 </div>
                 <div class="panel-body">
-                    <center>
-                        Password was successfully reset.
-                        <br>
-                        <a href={% url 'login' %}>Go to Login page</a>
-                    </center>
+                    <form method="POST" role="form">
+                        {% csrf_token %}
+                        <div class="form-group">
+                            {{ form.email.errors }}
+                            <label for="inputEmail">Email address:</label>
+                            {{ form.email }}
+                        </div>
+                        <div class="form-group">
+                            <button type="submit" class="btn btn-primary btn-block">Reset password</button>
+                        </div>
+
+                        {% for message in messages %}
+                        <div class="alert alert-danger">
+                            {{ message }}
+                        </div>
+                        {% endfor %}
+                    </form>
                 </div>
             </div>
         </div>
