Finished password recovery templates

--- a/wallafood/static/wallafood/css/password_reset_confirm.css
+++ b/wallafood/static/wallafood/css/password_reset_confirm.css
@@ -28,7 +28,7 @@ body, html{
     text-align: center;
 }
 
-.errorlist {
+ul {
     /* DO NOT REMOVE. Hides django format forms errors */
     display: none;
 }
