--- a/wallafood/templates/wallafood/password_reset.html
+++ b/wallafood/templates/wallafood/password_reset.html
@@ -42,19 +42,33 @@
                     <form method="POST" role="form">
                         {% csrf_token %}
                         <div class="form-group">
-                            {{ form.email.errors }}
-                            <label for="inputEmail">Email address:</label>
-                            {{ form.email }}
+                            <center>
+                                {{ form.email.errors }}
+                                <label for="inputEmail">Email address:</label>
+                                {{ form.email }}
+                            </center>
                         </div>
                         <div class="form-group">
                             <button type="submit" class="btn btn-primary btn-block">Reset password</button>
                         </div>
 
-                        {% for message in messages %}
-                        <div class="alert alert-danger">
-                            {{ message }}
-                        </div>
-                        {% endfor %}
+                        {% if form.errors %}
+                            {% for field in form %}
+                                {% if field.errors %}
+                                    <div class="alert alert-danger">
+                                        {% for error in field.errors %}
+                                            <li><strong>{{ error|escape }}</strong></li>
+                                        {% endfor %}
+                                    </div>
+                                {% endif %}
+                            {% endfor %}
+
+                            {% for error in form.non_field_errors %}
+                                <div class="alert alert-error">
+                                    <strong>{{ error|escape }}</strong>
+                                </div>
+                            {% endfor %}
+                        {% endif %}
                     </form>
                 </div>
             </div>
