--- a/wallafood/templates/wallafood/password_reset_confirm.html
+++ b/wallafood/templates/wallafood/password_reset_confirm.html
@@ -44,11 +44,23 @@
                         {{ form.as_p }}
                         <button type="submit">Submit</button>       
 
-                        {% for message in messages %}
-                        <div class="alert alert-danger">
-                            {{ message }}
-                        </div>
-                        {% endfor %}
+                        {% if form.errors %}
+                            {% for field in form %}
+                                {% if field.errors %}
+                                    <div class="alert alert-danger">
+                                        {% for error in field.errors %}
+                                            <li><strong>{{ error|escape }}</strong></li>
+                                        {% endfor %}
+                                    </div>
+                                {% endif %}
+                            {% endfor %}
+
+                            {% for error in form.non_field_errors %}
+                                <div class="alert alert-error">
+                                    <strong>{{ error|escape }}</strong>
+                                </div>
+                            {% endfor %}
+                        {% endif %}
                     </form>
                 </div>
             </div>
