First version of the twilio chat

--- a/wallafood/templates/wallafood/advertisements.html
+++ b/wallafood/templates/wallafood/advertisements.html
@@ -50,6 +50,9 @@
                         <a href={% url 'addAdvert' %}>Add Advertisement</a>
                     </li>
                     <li>
+                        <a href={% url 'showChats' %}>Chats</a>
+                    </li>
+                    <li>
                         <a href={% url 'doLogout' %}>Logout</a>
                     </li>
                 </ul>
