--- a/wallafood/templates/wallafood/advertisements.html
+++ b/wallafood/templates/wallafood/advertisements.html
@@ -137,10 +137,7 @@
                     <p class="list-group-item-heading bold">Allergens: {{ element.allergens }} </p>
                 </div>
                 <div class="input-group-btn col-md-1 btn-chat container-fluid center">
-                    <button class="btn btn-chat" type="submit">
-                        <i class="glyphicon glyphicon-comment"></i>
-                        <p>Chat with the vendor</p>
-                    </button>
+                    <a href={% url 'showChatDetail' slug=element.name %} class="btn btn-chat btn-sm">Chat</a>
                 </div>
             </div>
    
