--- a/wallafood/templates/wallafood/my_adds.html
+++ b/wallafood/templates/wallafood/my_adds.html
@@ -12,7 +12,7 @@
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u"
         crossorigin="anonymous">
     <script src="//netdna.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
-    <link rel="stylesheet" href={% static 'wallafood/css/advertisements.css' %}>
+    <link rel="stylesheet" href={% static 'wallafood/css/my_adds.css' %}>
     <link href="https://fonts.googleapis.com/css?family=Exo" rel="stylesheet">
 </head>
 
@@ -50,7 +50,7 @@
                         <a href={% url 'addAdvert' %}>Add Advertisement</a>
                     </li>
                     <li>
-                        <a href={% url 'my_adds' %}>My Adds</a>
+                        <a href={% url 'showChats' %}>My Chats</a>
                     </li>
                     <li>
                         <a href={% url 'doLogout' %}>Logout</a>
@@ -83,7 +83,7 @@
                     <p class="list-group-item-heading bold">Allergens: {{ element.allergens }} </p>
                 </div>
                 <div class="input-group-btn col-md-1 btn-chat container-fluid center">
-                    <button class="btn btn-chat" type="submit">
+                    <button class="btn btn-chat middle" type="submit">
                         <i class="glyphicon glyphicon-pencil"></i>
                         <p>Edit Add</p>
                     </button>
