--- a/wallafood/templates/wallafood/my_adds.html
+++ b/wallafood/templates/wallafood/my_adds.html
@@ -83,10 +83,7 @@
                     <p class="list-group-item-heading bold">Allergens: {{ element.allergens }} </p>
                 </div>
                 <div class="input-group-btn col-md-1 btn-chat container-fluid center">
-                    <button class="btn btn-chat middle" type="submit">
-                        <i class="glyphicon glyphicon-pencil"></i>
-                        <p>Edit Add</p>
-                    </button>
+                    <a href="{% url 'editAdvert' %}?id={{ element.id_advert | urlencode }}" class="btn btn-labeled btn-primary">Edit</a>
                 </div>
             </div>
    
